--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,6 @@
+
 {
+  "homepage": "https://Dhanushkumarsekar.github.io/peer-project-hub",
   "name": "peer-project-hub-client",
   "version": "0.1.0",
   "private": true,
@@ -12,11 +14,14 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
+
   "eslintConfig": {
     "extends": [
       "react-app"
@@ -36,6 +41,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.0"
   }
